--- a/style.css
+++ b/style.css
@@ -39,6 +39,15 @@ body {
 .jobs {
   border-bottom: solid 2px black;
 }
+
+/* Education */
+.edu {
+  text-align: center;
+  font-size: 20px;
+  padding-bottom: 35px;
+  border-bottom: solid 2px black;
+}
+
 /* Footer*/
 .contact {
 	height: 20px;
@@ -70,3 +79,7 @@ body {
 	float: left;
 	padding: 3px 10px 1px 10px;
 }
+
+
+
+
