--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@ body {
   text-align: center;
   font-size: 20px;
   
+  
 }
 
 .jobs {
@@ -55,19 +56,18 @@ body {
 	height: 20px;
 	width: 100%;
 	margin: 5px 0;
-	padding-left: 20px;
-	padding-top: 0px;
+	text-align: center;
     font-weight: 800;
 }
 
 .contact ul {
+    text-align: center;
 	list-style: none;
-	float: left;
 	padding-left: 20px;
 }
 
 .contact li {
-	float: left;
+    display: inline-block;
 	border-right: solid 1px #dddddd;
 	padding: 0px 20px;
 }
@@ -77,7 +77,7 @@ body {
 }
 
 .contact li p {
-	font-size: 10px;
+	font-size: 15px;
 	float: left;
 	padding: 3px 10px 1px 10px;
 }
